[gd_scene load_steps=5 format=3 uid="uid://c8ojcqet0tfsx"]

[ext_resource type="Script" uid="uid://c6tgdd1hvxp5u" path="res://src/scripts/niveles.gd" id="1_e3ky5"]
[ext_resource type="FontFile" uid="uid://bm6askaju3ctu" path="res://src/Assets/Fonts/main_font.ttf" id="2_7sqx1"]
[ext_resource type="Texture2D" uid="uid://celpqeptll8ml" path="res://src/Assets/Mundo/Goomba.jpg" id="2_o4vsv"]
[ext_resource type="Texture2D" uid="uid://cfag1d12pska3" path="res://src/Assets/Mundo/Mario.jpg" id="3_fgslt"]

[node name="Control" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 101.0
offset_top = 43.0
offset_right = 101.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3ky5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -101.0
offset_top = -43.0
offset_right = -61.0
offset_bottom = -3.0
scale = Vector2(8.99653, 5.97434)

[node name="Goomba" type="Sprite2D" parent="."]
position = Vector2(-18, 147)
scale = Vector2(0.722222, 0.428889)
texture = ExtResource("2_o4vsv")

[node name="Mario" type="Sprite2D" parent="."]
position = Vector2(174, 74)
scale = Vector2(0.993688, 0.77589)
texture = ExtResource("3_fgslt")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -99.0
offset_top = 29.0
offset_right = -59.0
offset_bottom = 69.0
scale = Vector2(6.85417, 3.56174)
color = Color(1, 0, 0, 0.490196)

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = -92.0
offset_top = -19.0
offset_right = 180.0
offset_bottom = 4.0
scale = Vector2(0.786294, 1.7596)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7sqx1")
theme_override_font_sizes/font_size = 20
text = "Seleccionar Nivel"

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -93.0
offset_top = 41.0
offset_right = 31.0
offset_bottom = 177.0
scale = Vector2(2.08772, 0.857143)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2

[node name="NivelPrueba" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Nivel de Pruba"

[node name="Nivel1" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Nivel 1"

[node name="Nivel2" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Nivel 2"

[node name="Atras" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Volver"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NivelPrueba" to="." method="_on_nivel_prueba_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Nivel1" to="." method="_on_nivel_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Nivel2" to="." method="_on_nivel_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Atras" to="." method="_on_atras_pressed"]
